application_server/configuration/metadata/service_config.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: thiersnicolas-dev
  labels:
    app: server-service
    app.kubernetes.io/component: server-service
    app.kubernetes.io/instance: server-service
    app.kubernetes.io/name: server-service
    app.kubernetes.io/part-of: server-service
    app.openshift.io/runtime-version: 0.0.1-SNAPSHOT
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: server-service
    deployment: server-service
  type: ClusterIP
